@@ -1,5 +1,5 @@
 Parchment-proxy contributors
-======================
+============================
 
 Atul Varma <varmaa@gmail.com>
 Dannii Willis <curiousdannii@gmail.com>
