@@ -1,4 +1,4 @@
-Copyright (c) 2008-2009 The Parchment-proxy (see CONTRIBUTORS)
+Copyright 2008-2010 The Parchment-proxy contributors (see CONTRIBUTORS)
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
